--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,47 +7,24 @@ services:
   db:
     image: "mariadb:latest"
     restart: unless-stopped
-    #    env_file: [ .env ]
-    environment:
-      MYSQL_DATABASE: alicedb
-      MYSQL_USER: root
-      MYSQL_PASSWORD: test123
-      MYSQL_ROOT_PASSWORD: test123
-    #      - MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
-    #      - MYSQL_DATABASE=$MYSQL_DATABASE
-    ports:
-      - "3306:3306"
-    networks:
-      - my-app
+    env_file: [ .env ]
+    #ports:
+    #  - "3306:3306"
     volumes:
       - database:/var/lib/mysql
+
   backend:
-    depends_on: [ db ]
-    #image: "blueirongirl/einkaufsliste-backend"
-    build:
-      context: "E:/dev/quellen/alicegithub/einkaufsliste-backend"
-      dockerfile: "E:/dev/quellen/alicegithub/einkaufsliste-backend/Dockerfile"
+    image: "blueirongirl/einkaufsliste-backend"
     restart: unless-stopped
+    depends_on: [ db ]
     env_file: [ .env ]
-    ports:
-      - "8080:8080"
-    networks:
-      - my-app
-    stdin_open: true
-    tty: true
+    #ports:
+    #  - "8080:8080"
+
   frontend:
     depends_on: [ backend ]
-    #    image: "blueirongirl/einkaufsliste-frontend"
-    build:
-      context: "E:/dev/quellen/alicegithub/einkaufsliste-frontend"
-      dockerfile: "E:/dev/quellen/alicegithub/einkaufsliste-frontend/Dockerfile"
+    image: "blueirongirl/einkaufsliste-frontend"
     restart: unless-stopped
     env_file: [ .env ]
     ports:
-      - "80:80"
-    networks:
-      - my-app
-
-networks:
-  my-app:
-    driver: bridge
+      - "8080:80"
