--- a/example.env
+++ b/example.env
@@ -1,6 +1,7 @@
 MYSQL_USER=root
 MYSQL_PASSWORD=change-me
 MYSQL_DATABASE=shopping-list
+MYSQL_ROOT_PASSWORD=change-me
 
 APP_DB_HOST=db
 APP_ERROR_INCLUDE_MESSAGE=never
